# cli-mate

./: .gitignore  main.py  pyproject.toml
cli_mate/: cache.py  main.py  tui.py  weather.py
