[project]
name = "cli-mate"
version = "0.1.0"
description = "A terminal weather CLI tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [
{name = "ham-munculus", email = "accounts.unguarded523@passmail.net"}
]
dependencies = [
    "requests >=2.31.0",
    "rich>=12.0.0",
    "typer>=0.9.0",
]

[project.scripts]
cli-mate = "cli_mate.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
